start to add StooqFeed